# attested-fetch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  build.sh  test.sh
.github/workflows/: build-test-virtual.yml  codeql.yml
src/: CMakeLists.txt  afetch.edl
src/common/: curl.h  util.h
src/enclave/: CMakeLists.txt  curl.h  enclave.cpp  oe_sign.conf  util.h
src/host/: CMakeLists.txt  host.cpp
src/virtual/: CMakeLists.txt  virtual.cpp
tests/: test.py
